Fix menu text element overflow bug (#624)
This PR updates the flex styles for the `menu__text` element so that it no longer overflows the menu component. Instead, it should now wrap do to flex shrink now being set to `1` via `flex: 1 1 auto`.

--- a/packages/menu/src/_menu.scss
+++ b/packages/menu/src/_menu.scss
@@ -106,5 +106,5 @@ $_e: var.$prefix-element;
 }
 
 .#{$_b}menu#{$_e}text {
-  flex-grow: 1;
+  flex: 1 1 auto;
 }
